# Building-a-Local-Chatbot-using-Ollama-and-Chainlit

./: .gitignore  README.md  chatbot.py  pyproject.toml  requirements.txt
